--- a/src/shared/locales/translations/en.json
+++ b/src/shared/locales/translations/en.json
@@ -1,5 +1,65 @@
 {
+  "common": {
+    "noOptionsText": "No options",
+    "showMore": "Show more",
+    "showLess": "Show less"
+  },
+  "gameCard": {
+    "playingtime": "Playing Time: {{playingtime}} min",
+    "playersCount": " No. of players: {{minplayers}} - {{maxplayers}}",
+    "minage": "Minimum age: {{minage}}+",
+    "goToBgg": "Go to BoardGameGeek.com"
+  },
+  "gameList": {
+    "searchResults": "Search Results",
+    "noResults": {
+      "title": "No results",
+      "content": "Please change search parameters."
+    }
+  },
+  "pagination": {
+    "showMore": "Load more {{itemsCount}}"
+  },
   "search": {
-    "pageTitle": "Find game in Mystika"
+    "pageTitle": "Find game in Mystika",
+    "tabnav": {
+      "category": "By category",
+      "name": "By name"
+    },
+    "form": {
+      "playersCount": {
+        "label": "How many people?",
+        "options": {
+          "0": "– all –",
+          "1": "1 player",
+          "200": "2 players (only two-player games)",
+          "2": "2 players",
+          "3": "3 players",
+          "4": "4 players",
+          "5": "5 players",
+          "6": "6 players",
+          "7": "7 players and more"
+        }
+      },
+      "playingTime": {
+        "label": "Game length",
+        "options": {
+          "all": "– all –",
+          "filler": "filler (under 20 min)",
+          "short": "short (21 - 60 min)",
+          "medium": "medium long (61 - 90 min)",
+          "long": "entire evening (91 min and more)"
+        }
+      },
+      "categories": {
+        "label": "Game categories"
+      },
+      "mechanics": {
+        "label": "Game mechanics"
+      },
+      "name": {
+        "label": "Game name"
+      }
+    }
   }
 }
