add translations for forms

--- a/src/shared/locales/translations/cs.json
+++ b/src/shared/locales/translations/cs.json
@@ -61,5 +61,91 @@
         "label": "Název hry"
       }
     }
+  },
+  "bggCategories": {
+    "Abstract Strategy": "Abstraktní",
+    "Action / Dexterity": "Zručnostní",
+    "Adventure": "Dobrodružná",
+    "Age of Reason": "Historická",
+    "American Civil War": "",
+    "American Indian Wars": "",
+    "American Revolutionary War": "",
+    "American West": "",
+    "Ancient": "",
+    "Animals": "Zvířátka",
+    "Arabian": "",
+    "Aviation / Flight": "",
+    "Bluffing": "Blafovací",
+    "Book": "",
+    "Card Game": "Karetní",
+    "Children's Game": "Pro děti",
+    "City Building": "",
+    "Civil War": "",
+    "Civilization": "Civilizační",
+    "Collectible Components": "",
+    "Comic Book / Strip": "",
+    "Deduction": "",
+    "Dice": "Kostková",
+    "Economic": "Ekonomická",
+    "Educational": "Vzdělávací",
+    "Electronic": "",
+    "Environmental": "",
+    "Expansion for Base-game": "",
+    "Exploration": "",
+    "Fan Expansion": "",
+    "Fantasy": "",
+    "Farming": "",
+    "Fighting": "",
+    "Game System": "",
+    "Horror": "Horor",
+    "Humor": "",
+    "Industry / Manufacturing": "",
+    "Korean War": "",
+    "Mafia": "",
+    "Math": "",
+    "Mature / Adult": "Pro dospělé",
+    "Maze": "Bludiště",
+    "Medical": "",
+    "Medieval": "",
+    "Memory": "Paměťová",
+    "Miniatures": "",
+    "Modern Warfare": "",
+    "Movies / TV / Radio theme": "",
+    "Murder/Mystery": "",
+    "Music": "",
+    "Mythology": "",
+    "Napoleonic": "",
+    "Nautical": "",
+    "Negotiation": "",
+    "Novel-based": "",
+    "Number": "",
+    "Party Game": "Párty",
+    "Pike and Shot": "",
+    "Pirates": "",
+    "Political": "",
+    "Post-Napoleonic": "",
+    "Prehistoric": "",
+    "Print & Play": "",
+    "Puzzle": "",
+    "Racing": "Závodní",
+    "Real-time": "",
+    "Religious": "",
+    "Renaissance": "",
+    "Science Fiction": "",
+    "Space Exploration": "",
+    "Spies/Secret Agents": "",
+    "Sports": "",
+    "Territory Building": "",
+    "Trains": "Vláčky",
+    "Transportation": "Dopravní",
+    "Travel": "",
+    "Trivia": "",
+    "Video Game Theme": "",
+    "Vietnam War": "",
+    "Wargame": "Válečná",
+    "Word Game": "Slovní",
+    "World War I": "",
+    "World War II": "",
+    "Zombies": ""
   }
 }
