add categories translations

--- a/src/shared/locales/translations/cs.json
+++ b/src/shared/locales/translations/cs.json
@@ -52,7 +52,12 @@
         }
       },
       "categories": {
-        "label": "Kategorie her"
+        "label": "Kategorie her",
+        "groups": {
+          "favourites": "Oblíbené",
+          "topics": "Témata",
+          "other": "Ostatní"
+        }
       },
       "mechanics": {
         "label": "Herní mechaniky"
@@ -63,89 +68,58 @@
     }
   },
   "bggCategories": {
-    "Abstract Strategy": "Abstraktní",
-    "Action / Dexterity": "Zručnostní",
-    "Adventure": "Dobrodružná",
-    "Age of Reason": "Historická",
-    "American Civil War": "",
-    "American Indian Wars": "",
-    "American Revolutionary War": "",
-    "American West": "",
-    "Ancient": "",
-    "Animals": "Zvířátka",
-    "Arabian": "",
-    "Aviation / Flight": "",
-    "Bluffing": "Blafovací",
-    "Book": "",
-    "Card Game": "Karetní",
-    "Children's Game": "Pro děti",
-    "City Building": "",
-    "Civil War": "",
-    "Civilization": "Civilizační",
-    "Collectible Components": "",
-    "Comic Book / Strip": "",
-    "Deduction": "",
-    "Dice": "Kostková",
-    "Economic": "Ekonomická",
-    "Educational": "Vzdělávací",
-    "Electronic": "",
-    "Environmental": "",
-    "Expansion for Base-game": "",
-    "Exploration": "",
-    "Fan Expansion": "",
-    "Fantasy": "",
-    "Farming": "",
-    "Fighting": "",
-    "Game System": "",
-    "Horror": "Horor",
-    "Humor": "",
-    "Industry / Manufacturing": "",
-    "Korean War": "",
-    "Mafia": "",
-    "Math": "",
-    "Mature / Adult": "Pro dospělé",
-    "Maze": "Bludiště",
-    "Medical": "",
-    "Medieval": "",
-    "Memory": "Paměťová",
-    "Miniatures": "",
-    "Modern Warfare": "",
-    "Movies / TV / Radio theme": "",
-    "Murder/Mystery": "",
-    "Music": "",
-    "Mythology": "",
-    "Napoleonic": "",
-    "Nautical": "",
-    "Negotiation": "",
-    "Novel-based": "",
-    "Number": "",
-    "Party Game": "Párty",
-    "Pike and Shot": "",
-    "Pirates": "",
-    "Political": "",
-    "Post-Napoleonic": "",
-    "Prehistoric": "",
-    "Print & Play": "",
-    "Puzzle": "",
-    "Racing": "Závodní",
-    "Real-time": "",
-    "Religious": "",
-    "Renaissance": "",
-    "Science Fiction": "",
-    "Space Exploration": "",
-    "Spies/Secret Agents": "",
-    "Sports": "",
-    "Territory Building": "",
-    "Trains": "Vláčky",
-    "Transportation": "Dopravní",
-    "Travel": "",
-    "Trivia": "",
-    "Video Game Theme": "",
-    "Vietnam War": "",
-    "Wargame": "Válečná",
-    "Word Game": "Slovní",
-    "World War I": "",
-    "World War II": "",
-    "Zombies": ""
+    "historical": "Historická",
+    "popculture": "Filmy, videohry, knihy, komiksy",
+    "abstractStrategy": "Abstraktní",
+    "actionDexterity": "Postřehová",
+    "adventure": "Dobrodružná",
+    "animals": "Zvířátka",
+    "arabian": "Blízký východ",
+    "aviationFlight": "Letectví",
+    "bluffing": "Blafovací",
+    "cardGame": "Karetní",
+    "childrensGame": "Pro děti",
+    "cityBuilding": "Budování měst",
+    "civilization": "Civilizační",
+    "collectibleComponents": "Sběratelská",
+    "deduction": "Dedukce",
+    "dice": "Kostková",
+    "economic": "Ekonomická",
+    "educational": "Vzdělávací",
+    "environmental": "Životní prostředí",
+    "exploration": "Objevování",
+    "fantasy": "Fantasy",
+    "farming": "Pěstování",
+    "fighting": "Bojování",
+    "horror": "Horor",
+    "humor": "Humor a zábava",
+    "industryManufacturing": "Průmyslová výroba",
+    "mafia": "Mafiáni",
+    "math": "Matematika",
+    "matureAdult": "Pro dospělé",
+    "maze": "Bludiště",
+    "medical": "Zdravotnictví",
+    "memory": "Paměťová",
+    "murderMystery": "Detektivní",
+    "music": "Hudba",
+    "mythology": "Mytologie",
+    "nautical": "Námořnictví",
+    "negotiation": "Vyjednávání",
+    "partyGame": "Párty hra",
+    "pirates": "Piráti",
+    "political": "Politika",
+    "puzzle": "Logická",
+    "racing": "Závodní",
+    "religious": "Náboženství",
+    "scienceFiction": "Sci-fi",
+    "spaceExploration": "Vesmír",
+    "spiesSecretAgents": "Špioni",
+    "sports": "Sport",
+    "territoryBuilding": "Budování území",
+    "trains": "Vlaky",
+    "trivia": "Znalostní",
+    "wargame": "Válečná",
+    "wordGame": "Slovní",
+    "zombies": "Zombies"
   }
 }
