--- a/src/shared/locales/translations/en.json
+++ b/src/shared/locales/translations/en.json
@@ -52,7 +52,12 @@
         }
       },
       "categories": {
-        "label": "Game categories"
+        "label": "Game categories",
+        "groups": {
+          "favourites": "Favourites",
+          "topics": "Topics",
+          "other": "Other"
+        }
       },
       "mechanics": {
         "label": "Game mechanics"
@@ -63,89 +68,58 @@
     }
   },
   "bggCategories": {
-    "Abstract Strategy": "",
-    "Action / Dexterity": "",
-    "Adventure": "",
-    "Age of Reason": "",
-    "American Civil War": "",
-    "American Indian Wars": "",
-    "American Revolutionary War": "",
-    "American West": "",
-    "Ancient": "",
-    "Animals": "",
-    "Arabian": "",
-    "Aviation / Flight": "",
-    "Bluffing": "",
-    "Book": "",
-    "Card Game": "",
-    "Children's Game": "",
-    "City Building": "",
-    "Civil War": "",
-    "Civilization": "",
-    "Collectible Components": "",
-    "Comic Book / Strip": "",
-    "Deduction": "",
-    "Dice": "",
-    "Economic": "",
-    "Educational": "",
-    "Electronic": "",
-    "Environmental": "",
-    "Expansion for Base-game": "",
-    "Exploration": "",
-    "Fan Expansion": "",
-    "Fantasy": "",
-    "Farming": "",
-    "Fighting": "",
-    "Game System": "",
-    "Horror": "",
-    "Humor": "",
-    "Industry / Manufacturing": "",
-    "Korean War": "",
-    "Mafia": "",
-    "Math": "",
-    "Mature / Adult": "",
-    "Maze": "",
-    "Medical": "",
-    "Medieval": "",
-    "Memory": "",
-    "Miniatures": "",
-    "Modern Warfare": "",
-    "Movies / TV / Radio theme": "",
-    "Murder/Mystery": "",
-    "Music": "",
-    "Mythology": "",
-    "Napoleonic": "",
-    "Nautical": "",
-    "Negotiation": "",
-    "Novel-based": "",
-    "Number": "",
-    "Party Game": "",
-    "Pike and Shot": "",
-    "Pirates": "",
-    "Political": "",
-    "Post-Napoleonic": "",
-    "Prehistoric": "",
-    "Print & Play": "",
-    "Puzzle": "",
-    "Racing": "",
-    "Real-time": "",
-    "Religious": "",
-    "Renaissance": "",
-    "Science Fiction": "",
-    "Space Exploration": "",
-    "Spies/Secret Agents": "",
-    "Sports": "",
-    "Territory Building": "",
-    "Trains": "",
-    "Transportation": "",
-    "Travel": "",
-    "Trivia": "",
-    "Video Game Theme": "",
-    "Vietnam War": "",
-    "Wargame": "",
-    "Word Game": "",
-    "World War I": "",
-    "World War II": "",
-    "Zombies": ""
+    "historical": "Historical",
+    "popculture": "Movies, Video Games, Books, Comic Books",
+    "abstractStrategy": "Abstract Strategy",
+    "actionDexterity": "Action / Dexterity",
+    "adventure": "Adventure",
+    "animals": "Animals",
+    "arabian": "Arabian",
+    "aviationFlight": "Aviation / Flight",
+    "bluffing": "Bluffing",
+    "cardGame": "Card Game",
+    "childrensGame": "Children's Game",
+    "cityBuilding": "City Building",
+    "civilization": "Civilization",
+    "collectibleComponents": "Collectible Components",
+    "deduction": "Deduction",
+    "dice": "Dice",
+    "economic": "Economic",
+    "educational": "Educational",
+    "environmental": "Environmental",
+    "exploration": "Exploration",
+    "fantasy": "Fantasy",
+    "farming": "Farming",
+    "fighting": "Fighting",
+    "horror": "Horror",
+    "humor": "Humor",
+    "industryManufacturing": "Industry / Manufacturing",
+    "mafia": "Mafia",
+    "math": "Math",
+    "matureAdult": "Mature / Adult",
+    "maze": "Maze",
+    "medical": "Medical",
+    "memory": "Memory",
+    "murderMystery": "Murder/Mystery",
+    "music": "Music",
+    "mythology": "Mythology",
+    "nautical": "Nautical",
+    "negotiation": "Negotiation",
+    "partyGame": "Party Game",
+    "pirates": "Pirates",
+    "political": "Political",
+    "puzzle": "Puzzle",
+    "racing": "Racing",
+    "religious": "Religious",
+    "scienceFiction": "Science Fiction",
+    "spaceExploration": "Space Exploration",
+    "spiesSecretAgents": "Spies/Secret Agents",
+    "sports": "Sports",
+    "territoryBuilding": "Territory Building",
+    "trains": "Trains",
+    "trivia": "Trivia",
+    "wargame": "Wargame",
+    "wordGame": "Word Game",
+    "zombies": "Zombies"
   }
 }
