--- a/src/shared/locales/translations/en.json
+++ b/src/shared/locales/translations/en.json
@@ -45,10 +45,10 @@
         "label": "Game length",
         "options": {
           "all": "– all –",
-          "filler": "filler (under 20 min)",
+          "filler": "filler (less than 20 min)",
           "short": "short (21 - 60 min)",
           "medium": "medium long (61 - 90 min)",
-          "long": "entire evening (91 min and more)"
+          "long": "entire evening (more than 91 min)"
         }
       },
       "categories": {
@@ -60,66 +60,246 @@
         }
       },
       "mechanics": {
-        "label": "Game mechanics"
+        "label": "Game mechanics",
+        "groups": {
+          "favourites": "Favourites",
+          "other": "Other"
+        }
       },
       "name": {
         "label": "Game name"
       }
     }
   },
-  "bggCategories": {
-    "historical": "Historical",
-    "popculture": "Movies, Video Games, Books, Comic Books",
-    "abstractStrategy": "Abstract Strategy",
-    "actionDexterity": "Action / Dexterity",
-    "adventure": "Adventure",
-    "animals": "Animals",
-    "arabian": "Arabian",
-    "aviationFlight": "Aviation / Flight",
-    "bluffing": "Bluffing",
-    "cardGame": "Card Game",
-    "childrensGame": "Children's Game",
-    "cityBuilding": "City Building",
-    "civilization": "Civilization",
-    "collectibleComponents": "Collectible Components",
-    "deduction": "Deduction",
-    "dice": "Dice",
-    "economic": "Economic",
-    "educational": "Educational",
-    "environmental": "Environmental",
-    "exploration": "Exploration",
-    "fantasy": "Fantasy",
-    "farming": "Farming",
-    "fighting": "Fighting",
-    "horror": "Horror",
-    "humor": "Humor",
-    "industryManufacturing": "Industry / Manufacturing",
-    "mafia": "Mafia",
-    "math": "Math",
-    "matureAdult": "Mature / Adult",
-    "maze": "Maze",
-    "medical": "Medical",
-    "memory": "Memory",
-    "murderMystery": "Murder/Mystery",
-    "music": "Music",
-    "mythology": "Mythology",
-    "nautical": "Nautical",
-    "negotiation": "Negotiation",
-    "partyGame": "Party Game",
-    "pirates": "Pirates",
-    "political": "Political",
-    "puzzle": "Puzzle",
-    "racing": "Racing",
-    "religious": "Religious",
-    "scienceFiction": "Science Fiction",
-    "spaceExploration": "Space Exploration",
-    "spiesSecretAgents": "Spies/Secret Agents",
-    "sports": "Sports",
-    "territoryBuilding": "Territory Building",
-    "trains": "Trains",
-    "trivia": "Trivia",
-    "wargame": "Wargame",
-    "wordGame": "Word Game",
-    "zombies": "Zombies"
+  "bgg": {
+    "categories": {
+      "historical": "Historical",
+      "popculture": "Movies, Video Games, Books, Comic Books",
+      "abstractStrategy": "Abstract Strategy",
+      "actionDexterity": "Action / Dexterity",
+      "adventure": "Adventure",
+      "animals": "Animals",
+      "arabian": "Arabian",
+      "aviationFlight": "Aviation / Flight",
+      "bluffing": "Bluffing",
+      "cardGame": "Card Game",
+      "childrensGame": "Children's Game",
+      "cityBuilding": "City Building",
+      "civilization": "Civilization",
+      "collectibleComponents": "Collectible Components",
+      "deduction": "Deduction",
+      "dice": "Dice",
+      "economic": "Economic",
+      "educational": "Educational",
+      "environmental": "Environmental",
+      "exploration": "Exploration",
+      "fantasy": "Fantasy",
+      "farming": "Farming",
+      "fighting": "Fighting",
+      "horror": "Horror",
+      "humor": "Humor",
+      "industryManufacturing": "Industry / Manufacturing",
+      "mafia": "Mafia",
+      "math": "Math",
+      "matureAdult": "Mature / Adult",
+      "maze": "Maze",
+      "medical": "Medical",
+      "memory": "Memory",
+      "murderMystery": "Murder/Mystery",
+      "music": "Music",
+      "mythology": "Mythology",
+      "nautical": "Nautical",
+      "negotiation": "Negotiation",
+      "partyGame": "Party Game",
+      "pirates": "Pirates",
+      "political": "Political",
+      "puzzle": "Puzzle",
+      "racing": "Racing",
+      "religious": "Religious",
+      "scienceFiction": "Science Fiction",
+      "spaceExploration": "Space Exploration",
+      "spiesSecretAgents": "Spies/Secret Agents",
+      "sports": "Sports",
+      "territoryBuilding": "Territory Building",
+      "trains": "Trains",
+      "trivia": "Trivia",
+      "wargame": "Wargame",
+      "wordGame": "Word Game",
+      "zombies": "Zombies"
+    },
+    "mechanics": {
+      "areaMajorityInfluence": "Area Control",
+      "cooperativeGame": "Cooperative",
+      "deckBagAndPoolBuilding": "Deck Building",
+      "pushYourLuck": "Push Your Luck",
+      "rolePlaying": "Role Playing",
+      "acting": "Acting",
+      "actionDrafting": "Action Drafting",
+      "actionPoints": "Action Points",
+      "actionQueue": "Action Queue",
+      "actionRetrieval": "Action Retrieval",
+      "actionTimer": "Action Timer",
+      "actionEvent": "Action/Event",
+      "advantageToken": "Advantage Token",
+      "alliances": "Alliances",
+      "areaMovement": "Area Movement",
+      "areaImpulse": "Area-Impulse",
+      "auction": "Auction/Bidding",
+      "automaticResourceGrowth": "Automatic Resource Growth",
+      "bettingAndBluffing": "Betting and Bluffing",
+      "bias": "Bias",
+      "bidsAsWagers": "Bids As Wagers",
+      "bingo": "Bingo",
+      "bribery": "Bribery",
+      "campaignBattleCardDriven": "Campaign / Battle Card Driven",
+      "cardPlayConflictResolution": "Card Play Conflict Resolution",
+      "catchTheLeader": "Catch the Leader",
+      "chaining": "Chaining",
+      "chitPullSystem": "Chit-Pull System",
+      "closedDrafting": "Closed Drafting",
+      "closedEconomyAuction": "Closed Economy Auction",
+      "commandCards": "Command Cards",
+      "commoditySpeculation": "Commodity Speculation",
+      "communicationLimits": "Communication Limits",
+      "connections": "Connections",
+      "constrainedBidding": "Constrained Bidding",
+      "contracts": "Contracts",
+      "crayonRailSystem": "Crayon Rail System",
+      "criticalHitsAndFailures": "Critical Hits and Failures",
+      "cubeTower": "Cube Tower",
+      "deckConstruction": "Deck Construction",
+      "deduction": "Deduction",
+      "delayedPurchase": "Delayed Purchase",
+      "diceRolling": "Dice Rolling",
+      "dieIconResolution": "Die Icon Resolution",
+      "differentDiceMovement": "Different Dice Movement",
+      "drawing": "Drawing",
+      "elapsedRealTimeEnding": "Elapsed Real Time Ending",
+      "enclosure": "Enclosure",
+      "endGameBonuses": "End Game Bonuses",
+      "events": "Events",
+      "finaleEnding": "Finale Ending",
+      "flicking": "Flicking",
+      "follow": "Follow",
+      "forceCommitment": "Force Commitment",
+      "gridCoverage": "Grid Coverage",
+      "gridMovement": "Grid Movement",
+      "handManagement": "Hand Management",
+      "hexagonGrid": "Hexagon Grid",
+      "hiddenMovement": "Hidden Movement",
+      "hiddenRoles": "Hidden Roles",
+      "hiddenVictoryPoints": "Hidden Victory Points",
+      "highestLowestScoring": "Highest-Lowest Scoring",
+      "hotPotato": "Hot Potato",
+      "iCutYouChoose": "I Cut, You Choose",
+      "impulseMovement": "Impulse Movement",
+      "income": "Income",
+      "increaseValueOfUnchosenResources": "Increase Value of Unchosen Resources",
+      "induction": "Induction",
+      "interrupts": "Interrupts",
+      "investment": "Investment",
+      "killSteal": "Kill Steal",
+      "kingOfTheHill": "King of the Hill",
+      "ladderClimbing": "Ladder Climbing",
+      "layering": "Layering",
+      "legacyGame": "Legacy Game",
+      "lineDrawing": "Line Drawing",
+      "lineOfSight": "Line of Sight",
+      "loans": "Loans",
+      "loseATurn": "Lose a Turn",
+      "mancala": "Mancala",
+      "mapAddition": "Map Addition",
+      "mapDeformation": "Map Deformation",
+      "mapReduction": "Map Reduction",
+      "market": "Market",
+      "matching": "Matching",
+      "measurementMovement": "Measurement Movement",
+      "meldingAndSplaying": "Melding and Splaying",
+      "memory": "Memory",
+      "minimapResolution": "Minimap Resolution",
+      "modularBoard": "Modular Board",
+      "moveThroughDeck": "Move Through Deck",
+      "movementPoints": "Movement Points",
+      "movementTemplate": "Movement Template",
+      "movingMultipleUnits": "Moving Multiple Units",
+      "multiUseCards": "Multi-Use Cards",
+      "multipleMaps": "Multiple Maps",
+      "narrativeChoiceParagraph": "Narrative Choice / Paragraph",
+      "negotiation": "Negotiation",
+      "neighborScope": "Neighbor Scope",
+      "networkAndRouteBuilding": "Network and Route Building",
+      "oncePerGameAbilities": "Once-Per-Game Abilities",
+      "openDrafting": "Open Drafting",
+      "orderCounters": "Order Counters",
+      "ordering": "Ordering",
+      "ownership": "Ownership",
+      "paperAndPencil": "Paper-and-Pencil",
+      "passedActionToken": "Passed Action Token",
+      "patternBuilding": "Pattern Building",
+      "patternMovement": "Pattern Movement",
+      "patternRecognition": "Pattern Recognition",
+      "physicalRemoval": "Physical Removal",
+      "pickUpAndDeliver": "Pick-up and Deliver",
+      "piecesAsMap": "Pieces as Map",
+      "playerElimination": "Player Elimination",
+      "playerJudge": "Player Judge",
+      "pointToPointMovement": "Point to Point Movement",
+      "predictiveBid": "Predictive Bid",
+      "prisonersDilemma": "Prisoner's Dilemma",
+      "programmedMovement": "Programmed Movement",
+      "questionsAndAnswers": "Questions and Answers",
+      "race": "Race",
+      "randomProduction": "Random Production",
+      "ratioCombatResultsTable": "Ratio / Combat Results Table",
+      "reRollingAndLocking": "Re-rolling and Locking",
+      "realTime": "Real-Time",
+      "relativeMovement": "Relative Movement",
+      "resourceQueue": "Resource Queue",
+      "resourceToMove": "Resource to Move",
+      "rockPaperScissors": "Rock-Paper-Scissors",
+      "rolesWithAsymmetricInformation": "Roles with Asymmetric Information",
+      "rollSpinAndMove": "Roll / Spin and Move",
+      "rondel": "Rondel",
+      "scenarioMissionCampaignGame": "Scenario / Mission / Campaign Game",
+      "scoreAndResetGame": "Score-and-Reset Game",
+      "secretUnitDeployment": "Secret Unit Deployment",
+      "selectionOrderBid": "Selection Order Bid",
+      "semiCooperativeGame": "Semi-Cooperative Game",
+      "setCollection": "Set Collection",
+      "simulation": "Simulation",
+      "simultaneousActionSelection": "Simultaneous Action Selection",
+      "singing": "Singing",
+      "singleLoserGame": "Single Loser Game",
+      "slidePush": "Slide/Push",
+      "soloSolitaireGame": "Solo / Solitaire Game",
+      "speedMatching": "Speed Matching",
+      "squareGrid": "Square Grid",
+      "stackingAndBalancing": "Stacking and Balancing",
+      "statCheckResolution": "Stat Check Resolution",
+      "staticCapture": "Static Capture",
+      "stockHolding": "Stock Holding",
+      "storytelling": "Storytelling",
+      "suddenDeathEnding": "Sudden Death Ending",
+      "tags": "Tags",
+      "takeThat": "Take That",
+      "targetedClues": "Targeted Clues",
+      "teamBasedGame": "Team-Based Game",
+      "techTreesTechTracks": "Tech Trees / Tech Tracks",
+      "threeDimensionalMovement": "Three Dimensional Movement",
+      "tilePlacement": "Tile Placement",
+      "trackMovement": "Track Movement",
+      "trading": "Trading",
+      "traitorGame": "Traitor Game",
+      "trickTaking": "Trick-taking",
+      "tugOfWar": "Tug of War",
+      "turnOrder": "Turn Order",
+      "variablePhaseOrder": "Variable Phase Order",
+      "variablePlayerPowers": "Variable Player Powers",
+      "variableSetUp": "Variable Set-up",
+      "victoryPointsAsAResource": "Victory Points as a Resource",
+      "voting": "Voting",
+      "workerPlacement": "Worker Placement",
+      "zoneOfControl": "Zone of Control"
+    }
   }
 }
