add sorting to gameList

--- a/src/shared/locales/translations/cs.json
+++ b/src/shared/locales/translations/cs.json
@@ -71,6 +71,13 @@
           "other": "Ostatní"
         }
       },
+      "ordering": {
+        "label": "Řazení",
+        "options": {
+          "name": "Abecedně ",
+          "rating": "Podle hodnocení "
+        }
+      },
       "name": {
         "label": "Název hry"
       }
