--- a/src/shared/locales/translations/en.json
+++ b/src/shared/locales/translations/en.json
@@ -71,6 +71,13 @@
           "other": "Other"
         }
       },
+      "ordering": {
+        "label": "Result order",
+        "options": {
+          "name": "Alphabetical",
+          "rating": "By rating"
+        }
+      },
       "name": {
         "label": "Game name"
       }
