--- a/src/shared/locales/translations/cs.json
+++ b/src/shared/locales/translations/cs.json
@@ -14,7 +14,8 @@
     "minage": "Doporučený věk: od {{minage}} let",
     "goToBgg": "Přejít na BoardGameGeek.com",
     "usersCount": "Hlasovalo {{usersCount}} uživatelů BoardGameGeek.com",
-    "rankTag": "{{rank}}. {{rankName}} hra v žebříčku BoardGameGeek.com"
+    "rankTag": "{{rank}}. {{rankName}} hra v žebříčku BoardGameGeek.com",
+    "noInfo": "O této hře nemáme více informací"
   },
   "rank": {
     "boardgame": "nejlepší",
@@ -24,7 +25,7 @@
     "familygames": "rodinná",
     "thematic": "tematická",
     "partygames": "párty",
-    "childrensgames": "dětská"
+    "childrensgames": "pro děti"
   },
   "gameList": {
     "searchResults": "Vyhledané hry",
