--- a/src/shared/locales/translations/cs.json
+++ b/src/shared/locales/translations/cs.json
@@ -4,12 +4,15 @@
     "showMore": "Více o hře",
     "showLess": "Skrýt"
   },
+  "meta": {
+    "title": "Katalog her - Mystica Brno"
+  },
   "gameCard": {
     "playingtime": "{{playingtime}} min",
     "playersCount_one": "{{minplayers}} hráč",
     "playersCount_few": "{{minplayers}} hráči",
-    "playersCountInterval_few": " {{minplayers}}–{{maxplayers}} hráči",
-    "playersCountInterval_other": " {{minplayers}}–{{maxplayers}} hráčů",
+    "playersCountInterval_few": "{{minplayers}}–{{maxplayers}} hráči",
+    "playersCountInterval_other": "{{minplayers}}–{{maxplayers}} hráčů",
     "weight": "Obtížnost: {{weight}}/5",
     "minage": "Doporučený věk: od {{minage}} let",
     "goToBgg": "Přejít na BoardGameGeek.com",
@@ -25,7 +28,8 @@
     "familygames": "rodinná",
     "thematic": "tematická",
     "partygames": "párty",
-    "childrensgames": "pro děti"
+    "childrensgames": "pro děti",
+    "cgs": "TCG/LCG"
   },
   "gameList": {
     "searchResults": "Vyhledané hry",
@@ -325,5 +329,45 @@
       "workerPlacement": "Worker Placement",
       "zoneOfControl": "Zone of Control"
     }
+  },
+  "faq": {
+    "pageTitle": "Často kladené otázky",
+    "content": [
+      {
+        "q": "Tyhle stránky spravuje Mystica?",
+        "a": "Ne, toto je pouze fanouškovský projekt. S Mysticou spolupracujeme na přesnějším a kompletním seznamu her."
+      },
+      {
+        "q": "K čemu to je, když má Mystica na webu seznam her?",
+        "a": "Seznam her je užitečný, pokud víte, co chcete hrát. Pokud chcete zkusit novou hru pro 5 hráčů s herní dobou do 60 minut, nezbývá vám než ručně vyhledávat hry podle názvu, dokud nenajdete, co hledáte. Toto vyhledávání jsme už udělali za vás, takže najít hru podle vašich potřeb je nyní otázkou chvilky."
+      },
+      {
+        "q": "Je seznam her aktuální?",
+        "a": "Je stejně aktuální jako seznam her na webu Mysticy."
+      },
+      {
+        "q": "Jsou informace u hry správně?",
+        "a": "Všechny informace o hře včetně obrázku se automaticky stahují z BoardGameGeek.com, a to pouze na základě jména hry. Je proto možné, že je zde zobrazena jiná edice hry, jiná jazyková verze, nebo dokonce úplně jiná hra. V případě pochybností kontaktujte obsluhu Mysticy a doptejte se na konkrétní hru. Na přesném a kompletním katalogu her pracujeme s Mysticou."
+      },
+      {
+        "q": "Dá se nějak zjistit, jestli je hra v češtině/angličtině?",
+        "a": "Zatím ne. Zkuste najít hru na webu Mysticy, u některých her bývá uvedeno CZ/ENG."
+      },
+      {
+        "q": "Můžu si tady hru rovnou rezervovat?",
+        "a": "Ne, toto je pouze katalog a kromě zobrazování her nic neumí."
+      },
+      {
+        "q": "Co znamená (libovolný deskoherní termín)?",
+        "a": "Nevíme. Pravděpodobně to vymysleli na BoardGameGeek.com."
+      },
+      {
+        "q": "Jak vás můžu podpořit?",
+        "a": "Řekněte o nás svým spoluhráčům. V žádném případě nám neposílejte peníze, máme jich tolik, že už se nám ani nikam nevejdou."
+      }
+    ]
+  },
+  "footer": {
+    "goToMystica": "Oficiální seznam her"
   }
 }
