--- a/src/shared/locales/translations/en.json
+++ b/src/shared/locales/translations/en.json
@@ -16,6 +16,7 @@
     "weight": "Complexity: {{weight}}/5",
     "minage": "Minimum age: {{minage}}+",
     "goToBgg": "Go to BoardGameGeek.com",
+    "goToZh": "Search game on Zatrolene-hry.cz",
     "usersCount": "Voted {{usersCount}} users of BoardGameGeek.com",
     "rankTag": "{{rank}}. {{rankName}} game in BoardGameGeek.com rank",
     "noInfo": "No additional information"
@@ -104,7 +105,7 @@
     "pageTitle": "Find game by name",
     "form": {
       "name": {
-        "label": "Game name"
+        "label": "Game name (Czech or original)"
       }
     }
   },
@@ -381,7 +382,7 @@
     ]
   },
   "feedback": {
-    "pageTitle": "Contact us",
+    "pageTitle": "Contact Us",
     "contentParagraph": "Do you have any feedback? Let us know!",
     "form": {
       "label": "Your message",
@@ -390,6 +391,6 @@
     }
   },
   "footer": {
-    "goToMystica": "Oficiální seznam her"
+    "goToMystica": "Official list of games"
   }
 }
