--- a/src/shared/locales/translations/cs.json
+++ b/src/shared/locales/translations/cs.json
@@ -17,8 +17,7 @@
     "minage": "Doporučený věk: od {{minage}} let",
     "goToBgg": "Přejít na BoardGameGeek.com",
     "goToZh": "Vyhledat na Zatrolenkách",
-    "usersCount": "Hlasovalo {{usersCount}} uživatelů BoardGameGeek.com",
-    "rankTag": "{{rank}}. {{rankName}} hra v žebříčku BoardGameGeek.com",
+    "usersCount": "{{usersCount}} hodnocení",
     "noInfo": "O této hře nemáme více informací"
   },
   "rank": {
@@ -72,8 +71,8 @@
         "options": {
           "all": "– nezáleží –",
           "filler": "filler (do 20 min)",
-          "short": "krátká (21–60 min)",
-          "medium": "středně dlouhá (61–90 min)",
+          "short": "krátká (21–59 min)",
+          "medium": "středně dlouhá (60–90 min)",
           "long": "na celý večer (91 min a více)"
         }
       },
